--- a/public/inter/inter.css
+++ b/public/inter/inter.css
@@ -3,16 +3,16 @@
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url("Inter-Thin-BETA.woff2?v=3.11") format("woff2"),
-    url("Inter-Thin-BETA.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-Thin-BETA.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-Thin-BETA.woff?v=3.11") format("woff");
 }
 @font-face {
   font-family: "Inter";
   font-style: italic;
   font-weight: 100;
   font-display: swap;
-  src: url("Inter-ThinItalic-BETA.woff2?v=3.11") format("woff2"),
-    url("Inter-ThinItalic-BETA.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-ThinItalic-BETA.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-ThinItalic-BETA.woff?v=3.11") format("woff");
 }
 
 @font-face {
@@ -20,16 +20,17 @@
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url("Inter-ExtraLight-BETA.woff2?v=3.11") format("woff2"),
-    url("Inter-ExtraLight-BETA.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-ExtraLight-BETA.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-ExtraLight-BETA.woff?v=3.11") format("woff");
 }
 @font-face {
   font-family: "Inter";
   font-style: italic;
   font-weight: 200;
   font-display: swap;
-  src: url("Inter-ExtraLightItalic-BETA.woff2?v=3.11") format("woff2"),
-    url("Inter-ExtraLightItalic-BETA.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-ExtraLightItalic-BETA.woff2?v=3.11")
+      format("woff2"),
+    url("public/inter/Inter-ExtraLightItalic-BETA.woff?v=3.11") format("woff");
 }
 
 @font-face {
@@ -37,16 +38,16 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("Inter-Light-BETA.woff2?v=3.11") format("woff2"),
-    url("Inter-Light-BETA.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-Light-BETA.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-Light-BETA.woff?v=3.11") format("woff");
 }
 @font-face {
   font-family: "Inter";
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url("Inter-LightItalic-BETA.woff2?v=3.11") format("woff2"),
-    url("Inter-LightItalic-BETA.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-LightItalic-BETA.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-LightItalic-BETA.woff?v=3.11") format("woff");
 }
 
 @font-face {
@@ -54,16 +55,16 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("Inter-Regular.woff2?v=3.11") format("woff2"),
-    url("Inter-Regular.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-Regular.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-Regular.woff?v=3.11") format("woff");
 }
 @font-face {
   font-family: "Inter";
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url("Inter-Italic.woff2?v=3.11") format("woff2"),
-    url("Inter-Italic.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-Italic.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-Italic.woff?v=3.11") format("woff");
 }
 
 @font-face {
@@ -71,16 +72,16 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("Inter-Medium.woff2?v=3.11") format("woff2"),
-    url("Inter-Medium.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-Medium.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-Medium.woff?v=3.11") format("woff");
 }
 @font-face {
   font-family: "Inter";
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url("Inter-MediumItalic.woff2?v=3.11") format("woff2"),
-    url("Inter-MediumItalic.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-MediumItalic.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-MediumItalic.woff?v=3.11") format("woff");
 }
 
 @font-face {
@@ -88,16 +89,16 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("Inter-SemiBold.woff2?v=3.11") format("woff2"),
-    url("Inter-SemiBold.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-SemiBold.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-SemiBold.woff?v=3.11") format("woff");
 }
 @font-face {
   font-family: "Inter";
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url("Inter-SemiBoldItalic.woff2?v=3.11") format("woff2"),
-    url("Inter-SemiBoldItalic.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-SemiBoldItalic.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-SemiBoldItalic.woff?v=3.11") format("woff");
 }
 
 @font-face {
@@ -105,16 +106,16 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("Inter-Bold.woff2?v=3.11") format("woff2"),
-    url("Inter-Bold.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-Bold.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-Bold.woff?v=3.11") format("woff");
 }
 @font-face {
   font-family: "Inter";
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url("Inter-BoldItalic.woff2?v=3.11") format("woff2"),
-    url("Inter-BoldItalic.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-BoldItalic.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-BoldItalic.woff?v=3.11") format("woff");
 }
 
 @font-face {
@@ -122,16 +123,16 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url("Inter-ExtraBold.woff2?v=3.11") format("woff2"),
-    url("Inter-ExtraBold.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-ExtraBold.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-ExtraBold.woff?v=3.11") format("woff");
 }
 @font-face {
   font-family: "Inter";
   font-style: italic;
   font-weight: 800;
   font-display: swap;
-  src: url("Inter-ExtraBoldItalic.woff2?v=3.11") format("woff2"),
-    url("Inter-ExtraBoldItalic.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-ExtraBoldItalic.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-ExtraBoldItalic.woff?v=3.11") format("woff");
 }
 
 @font-face {
@@ -139,16 +140,16 @@
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url("Inter-Black.woff2?v=3.11") format("woff2"),
-    url("Inter-Black.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-Black.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-Black.woff?v=3.11") format("woff");
 }
 @font-face {
   font-family: "Inter";
   font-style: italic;
   font-weight: 900;
   font-display: swap;
-  src: url("Inter-BlackItalic.woff2?v=3.11") format("woff2"),
-    url("Inter-BlackItalic.woff?v=3.11") format("woff");
+  src: url("public/inter/Inter-BlackItalic.woff2?v=3.11") format("woff2"),
+    url("public/inter/Inter-BlackItalic.woff?v=3.11") format("woff");
 }
 
 /* -------------------------------------------------------
@@ -166,7 +167,7 @@ Usage:
   font-display: swap;
   font-style: normal;
   font-named-instance: "Regular";
-  src: url("Inter-roman.var.woff2?v=3.11") format("woff2");
+  src: url("public/inter/Inter-roman.var.woff2?v=3.11") format("woff2");
 }
 @font-face {
   font-family: "Inter var";
@@ -174,7 +175,7 @@ Usage:
   font-display: swap;
   font-style: italic;
   font-named-instance: "Italic";
-  src: url("Inter-italic.var.woff2?v=3.11") format("woff2");
+  src: url("public/inter/Inter-italic.var.woff2?v=3.11") format("woff2");
 }
 
 /* --------------------------------------------------------------------------
@@ -195,5 +196,5 @@ explicitly, e.g.
   font-weight: 100 900;
   font-display: swap;
   font-style: oblique 0deg 10deg;
-  src: url("Inter.var.woff2?v=3.11") format("woff2");
+  src: url("public/inter/Inter.var.woff2?v=3.11") format("woff2");
 }
